Added some new codes
I added new codes and made some of my header tags fancy.

--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 * {
     border: 1px solid red !important;
 }
+.selector-for-some-widget {
+  box-sizing: content-box;
+}
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
